2004-09-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/filebox.tcl: Stop the use of tk_strictMotif from
	poisoning the rest of the widget demo. [Bug 1013942]

2004-09-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (ActivateWindow): SetFocus to grab window when
	clicking outside the grab window hierarchy. [Bug 220908]

2004-09-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c: backport of several items from 8.5 head:
	(ReadIconFromFile): when using SHGetFileInfo to retrieve icon, get
	regular icon as well for correct Alt-Tab icon. (hobbs)
	Fix for #742882 "Potential division by zero in gridded wm
	geometry" (jenglish)
	(UpdateWrapper): Let overrideredirect'ed window's wrapper be the
	child of desktop window, thus making it to behave more similarly
	to X11 Override Redirect. Esp. useful for combobox-like
	megawidgets. (kovalenko)
	(InstallColormaps): Check for TK_ALREADY_DEAD to avoid handling of
	dead windows. (kovalenko)
	Change 'panic' to 'Tcl_Panic' (davygrvy)

2004-09-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tkfbox.tcl (::tk::dialog::file::Create): use label
	instead of button for "File of type", as it properly handles
	-state disabled now.

2004-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/text.tcl (::tk::TextTranspose): Ensure that Transpose is
	an atomic op to undo.  Replace 'string compare' with 'ne'.

2004-08-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c (EatSpuriousMessageBugFix): Fix a problem with
	double clicks in file dialogs falling through to the window
	underneath in win32. [Patch #611615]

	* win/tkWinDialog.c (Tk_MessageBoxObjCmd): Inherit the icon from
	* win/tkWinInt.h:                          the -parent window for
	* win/tkWinWm.c (TkWinGetIcon):            the MessageBox.

2004-08-18  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkPanedWindow.c (optionSpecs): Add missing GEOMETRY flag
	to -handlepad option. [Bug 1010938]
